@@ -5,6 +5,7 @@ hildon-home (0.3.15~unreleased) unstable; urgency=low
     are not changed. Fixes: NB#100103
   * Select current background in "Change background" dialog. Fixes: NB#101972,
     NB#96398
+  * Implement theme and imageset prefixes in "Change background" dialog.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon,  2 Mar 2009 12:22:28 +0200
 
